<resources>
    <string name="app_name">MoneyMapp</string>
    <string name="reset"><u>reset</u></string>
    <string name="rentabilizar_posesiones">las posesiones son tus activos que no solo pierden valor a lo largo del tiempo, sino que tambien te generan un gasto adicional. Primero tienes que ver en el mercado cual es el valor de tu posesión, decidir si te conviene más venderla o arrendarla, en ambos casos dejas de perder dinero. En el caso de venderla puedes verificar su valor en una tienda online y venderla, en el caso de arrendarla puedes ver su precio en el mercado y ofrecerla por algún servicio web que te permita realizar esta opción.</string>
    <string name="cobranza_extrema">Cuando tienes dinero prestado y este no ha sido devuelto en el tiempo estipulado, Tienes diferentes formas de hacer que esta deuda termine para así obtener lo que te corresponde. Los caminos o alternativas para solucionar esto son renegociar la deuda, solicitar pagos parciales, canjear la deuda por un activo, demandar para una pérdida fiscal o factoraje.</string>
    <string name="pon_a_trabajar_tu_dinero">dinero ahorrado se lo lleva la inlfación, no es malo tener dinero ahorrado el problema es cuando este es en exceso y no se invierte o se pone a trabajar para así crear más dinero. Hoy en nuestra sociedad hay algo que se llama inflación y eso significa que cada día nuestro dinero que tenemos pierde su valor al punto que valer muy poco con el tiempo, por eso esta es una buena estrategia para lidiar con este efecto financiero.</string>
    <string name="sal_deudas_destructivas">Tenemos dos tipos de deudas, la deuda expansiva, la que te genra más dinero, y la deuda destructiva, las que te quitan dinero. Las personas caes en deuda destructiva cuando adquieren posesiones a crédito que pierden o desaparecen su valor con el tiempo. Para salir de esta situacion tienes que primero clarifacr tu situación(saber cuanto realemente debes), simplifica tu vida( esto es para que tengas el dinero para pagar la deuda), disminuye intereses(negociando los intereses con la institución financiera), paga más rápido(céntrate en pagar primero la deuda menor y así hasta terminar con la mayor) y genera dinero extra( vendiendo posesiones que no utilizas y pierden su valor con el tiempo por ejemplo).</string>
    <string name="austeridad_absoluta">Esta estategia consiste en dejar de lado una seria de gastos que se realizan de forma impulsiva de cosas que realmente no necesitamos, lo contrario a este nocivo hábito para la salud de tus finanzas es lo que realizan la gran mayoria de gente rica, por eso mantienen con números positivos sus indicadores de dinero. Esta habilidad se desarrolla con práctica pero es posible de realizar, solo necesitas autocontrol y de a poco verás los beneficios que este comportamiento trae. No quita que puedas hacer un gasto innecesario o darte un lujo, solo que son los minimos y mantienes siempre el control de tu salud financiera. </string>
    <string name="paso1">Money Mapp es una aplicación móvil que te ayuda a aplicar la teoría financiera del experto en finanzas Alejandro Saracho a través de su libro "Mapa de Riqueza: Y la ruta definitiva para alcanzar la Libertad Financiera en 3 años o menos", esta aplicación te ayudará a ejecutar cálculos financieros que exige el experto para que logres el objetivo que plantea en su libro</string>
    <string name="paso2">Interioriza todas las etapas, su acceso está en el menú principal, y al final puedes elegir por cual etapa quieres comenzar seleccionandola, y esta aparecerá en tu pantalla principal</string>
    <string name="paso3">ingresa tu presupuesto mensual, el acceso está en el menú principal, para comenzar la ruta financiera tienes que ingresar por 1 mes los gastos de tu estilo de vida y ese número sera tu número de riqueza el cual quedará fijo, también lo puedes cambiar si así lo deseas, tan solo apretando "reset"</string>
    <string name="paso4">Registra tus Ingresos Pasivos, el acceso está en el menú principal, tendrás que registrar todas las ganancias que tengas por cada uno mes a mes, podrás editarlos y eliminarlos cuando deses</string>
    <string name="paso5">Registra en la sección mapa de riqueza tus activos, pasivos, entradas, salidas mensuales hacer eso dará como resultado tu riqueaza neta y tu flujo de efectivo neto cada mes, tus resultados siempre estarán visibles en la pantalla principal</string>
    <string name="paso6">Verifica tu progreso con los indicadores que se muestran en la pantalla principal. Estos son n° de riqueza, activos, pasivos, entradas, salidas, riqueza neta y flujo de efectivo neto. También tienes un gráfico que compara cada mes tu presupuesto mensual con tus ganancias mensuales que provienen de tus ingresos pasivos y puedes comprobar si ya alcanzaste la libertad financiera, además tienes indicada la etapa en que está. Por último recuerda que puedes descargar un informe de tu mapa de riqueza en la sección informe en el menú principal</string>
</resources>