<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context="com.example.moneymapp.instrucciones.Instrucciones1">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:fontFamily="@font/arialbold"
                android:text="Instrucciones "
                android:textAlignment="center"
                android:textColor="@color/colorLetras"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/arialbold"
                android:text="Paso 1:"
                android:textColor="@color/colorLetras"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/arialbold"
                android:text="Antes de comenzar información necesaria"
                android:textColor="@color/colorLetras"
                android:textSize="14sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@color/colorFondoLetras"
                android:fontFamily="@font/arialbold"
                android:padding="10sp"
                android:text="@string/paso1"
                android:textColor="@color/colorLetras"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/arialbold"
                android:text="Paso 2:"
                android:textColor="@color/colorLetras"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/arialbold"
                android:text="Lee las Etapas"
                android:textColor="@color/colorLetras"
                android:textSize="14sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@color/colorFondoLetras"
                android:fontFamily="@font/arialbold"
                android:padding="10sp"
                android:text="@string/paso2"
                android:textColor="@color/colorLetras"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/arialbold"
                android:text="Paso 3:"
                android:textColor="@color/colorLetras"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/arialbold"
                android:text="Crear tu Presupuesto Mensual"
                android:textColor="@color/colorLetras"
                android:textSize="14sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@color/colorFondoLetras"
                android:fontFamily="@font/arialbold"
                android:padding="10sp"
                android:text="@string/paso3"
                android:textColor="@color/colorLetras"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/arialbold"
                android:text="Paso 4:"
                android:textColor="@color/colorLetras"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView57"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/arialbold"
                android:text="Registra tus Ingresos Pasivos"
                android:textColor="@color/colorLetras"
                android:textSize="14sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView58"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@color/colorFondoLetras"
                android:fontFamily="@font/arialbold"
                android:padding="10sp"
                android:text="@string/paso4"
                android:textColor="@color/colorLetras"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/arialbold"
                android:text="Paso 5:"
                android:textColor="@color/colorLetras"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/arialbold"
                android:text="Registra tu Mapa de Riqueza"
                android:textColor="@color/colorLetras"
                android:textSize="14sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:background="@color/colorFondoLetras"
                android:fontFamily="@font/arialbold"
                android:padding="10sp"
                android:text="@string/paso5"
                android:textColor="@color/colorLetras"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/arialbold"
                android:text="Paso 6:"
                android:textColor="@color/colorLetras"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/arialbold"
                android:text="Verifica tus Resultados"
                android:textColor="@color/colorLetras"
                android:textSize="14sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="20sp"
                android:background="@color/colorFondoLetras"
                android:fontFamily="@font/arialbold"
                android:padding="10sp"
                android:text="@string/paso6"
                android:textColor="@color/colorLetras"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>







</androidx.constraintlayout.widget.ConstraintLayout>